# WebCT

./: .eslintrc.json  .flake8  .flaskenv  .gitignore  .pylintrc  Dockerfile  Readme.md  app.py  environment.yml  file_version_info.cfg  flake.nix  index.md  package.json  rollup.config.mjs  setup.cfg  tsconfig.json  tsdoc.json  version.py  webct.spec
data/materials/element/: aluminium.json  copper.json
data/materials/fuel-pellet/: cladding.json  kernels.json  pellet.json  placeholder-pellet.json  printed_zro2.json
data/materials/plastics/: polyvinalchloride.json  pvc.json  trichloropropene.json
data/materials/rods/: cladding.json  fuel.json  particles.json
data/materials/special/: Air.json
data/models/: wire-sheath.stl  wire-wires.stl
doc/: CONTRIBUTING.md  Recon_combinations.md
doc/Talks/: Ibsim-4i-2022.pptx
doc/videos/: readme.md
webct/: __init__.py
webct/__pyinstaller/: __init__.py
webct/__pyinstaller/hooks/: hook-astra.py  hook-cil.py  hook-spekpy.py  hook-tigre.py
webct/blueprints/app/: __init__.py  routes.py
webct/blueprints/base/: __init__.py  routes.py
webct/blueprints/beam/: __init__.py  routes.py
webct/blueprints/capture/: __init__.py  routes.py
webct/blueprints/detector/: __init__.py  routes.py
webct/blueprints/errors/: __init__.py  handlers.py
webct/blueprints/preview/: __init__.py  routes.py
webct/blueprints/reconstruction/: __init__.py  routes.py
webct/blueprints/samples/: __init__.py  routes.py
webct/components/: Beam.py  Capture.py  Detector.py  Material.py  Reconstruction.py  Samples.py  imgutils.py
(+110 files in other folders)
