[metadata]
name = webct
version = 0.0.1
author = Iwan Mitchell
author_email = i.t.mitchell@bangor.ac.uk
description = Web-based X-ray CT solution
long_description = file: Readme.md
keywords = x-ray, simulation, CT, computed tomography, scientific
classifiers =
	Development Status :: 2 - Pre-Alpha
	Environment :: GPU
	Intended Audience :: Science/Research
	License :: Other/Proprietary License
	Programming Language :: Python :: 3 :: Only
	Topic :: Scientific/Engineering :: Image Processing
	Topic :: Scientific/Engineering :: Medical Science Apps.
	Topic :: Scientific/Engineering :: Visualization
	Typing :: Typed
license = Proprietary

[options]
packages = find:
zip_safe = True

[options.entry_points]
pyinstaller40 =
  hook-dirs = webct.__pyinstaller:get_hook_dirs
